--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   "homepage": "https://github.com/Hershur/Maintenance-Tracker-App#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dot-env": "0.0.1",
     "express": "^4.17.1",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "pg": "^7.11.0"
   }
 }
