--- a/package.json
+++ b/package.json
@@ -27,8 +27,13 @@
   },
   "homepage": "https://github.com/Hershur/Maintenance-Tracker-App#readme",
   "dependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/node": "^7.5.5",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.5.5",
     "body-parser": "^1.19.0",
     "dot-env": "0.0.1",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "nodemon": "^1.19.1",
     "pg": "^7.11.0"
