--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "@babel/node": "^7.5.5",
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.5.5",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "dot-env": "0.0.1",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "lodash": "^4.17.15",
     "nodemon": "^1.19.1",
     "pg": "^7.11.0"
   }
