--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express": "^4.17.1",
     "lodash": "^4.17.15",
     "nodemon": "^1.19.1",
-    "pg": "^7.11.0"
+    "pg": "^7.11.0",
+    "pug": "^2.0.4"
   }
 }
