--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "@babel/preset-env": "^7.5.5",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "config": "^3.2.2",
     "dot-env": "0.0.1",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "nodemon": "^1.19.1",
     "pg": "^7.11.0",
