--- a/package.json
+++ b/package.json
@@ -27,10 +27,7 @@
   },
   "homepage": "https://github.com/Hershur/Maintenance-Tracker-App#readme",
   "dependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/node": "^7.5.5",
     "@babel/polyfill": "^7.4.4",
-    "@babel/preset-env": "^7.5.5",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "config": "^3.2.2",
@@ -42,5 +39,15 @@
     "nodemon": "^1.19.1",
     "pg": "^7.11.0",
     "pug": "^2.0.4"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0"
   }
 }
